--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "23.1.3"
+    "electron": "^23.3.13",
+    "tailwindcss": "^3.4.1"
   }
 }
